<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Student_Iformation"
    android:orientation="vertical"
    android:background="#f2f4f6">
    <EditText
        android:id="@+id/StudentName"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:hint="@string/Enter_Name"
        android:textColorHint="#660D3F67"
        android:textColor="#000000"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="@drawable/edittex_style"
        android:padding="@dimen/_15sdp"/>
    <EditText
        android:id="@+id/StudentMail"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:hint="@string/Enter_email"
        android:textColorHint="#660D3F67"
        android:textColor="#000000"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="@drawable/edittex_style"
        android:padding="@dimen/_15sdp"
        />
    <EditText
        android:id="@+id/StudentID"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:hint="@string/Enter_Id"
        android:textColorHint="#660D3F67"
        android:textColor="#000000"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="@drawable/edittex_style"
        android:padding="@dimen/_15sdp"/>
    <EditText
        android:id="@+id/StudentPass"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:hint="@string/Enter_password"
        android:textColorHint="#660D3F67"
        android:inputType="textPassword"
        android:textColor="#000000"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="@drawable/edittex_style"
        android:padding="@dimen/_15sdp"/>
    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/groups">
        <RadioButton
            android:id="@+id/group_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Group One"
            android:textColor="#0d3f67"/>
        <RadioButton
            android:id="@+id/group_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Group Two"
            android:textColor="#0d3f67"/>
        <RadioButton
            android:id="@+id/group_three"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Group Three"
            android:textColor="#0d3f67"/>
        <RadioButton
            android:id="@+id/group_four"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Group Four"
            android:textColor="#0d3f67"/>

    </RadioGroup>

    <Button
          android:layout_width="@dimen/_200sdp"
          android:layout_height="@dimen/_35sdp"
          android:textColor="#ffffff"
          android:text="@string/enter_data"
          android:onClick="StudentData"
          android:background="@drawable/button_color"
          android:layout_marginLeft="@dimen/_50sdp"
          android:layout_marginTop="@dimen/_10sdp"
           />

</LinearLayout>